<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableLayout
android:id="@+id/EditTabLayout"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:collapseColumns="2"
android:stretchColumns="1"
>
	<TableRow
	android:id="@+id/TableRow01"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
		<TextView  
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:id="@+id/CourseNameT" 
    	android:text="@string/CourseName"
    	/>
    	<EditText
    	android:id="@+id/CourseNameE"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"></EditText>
	</TableRow>
	<TableRow
	android:id="@+id/TableRow01"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
		<TextView  
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:id="@+id/TeacherNameT" 
    	android:text="@string/TeacherName"
    	/>
    	<EditText
    	android:id="@+id/TeacerNameE"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"></EditText>
	</TableRow>
	<TableRow
	android:id="@+id/TableRow01"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
		<TextView
		android:id="@+id/CourseTimeT"
		android:text="@string/CourseTime"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"></TextView>
		<Spinner
		android:id="@+id/CourseSpinner"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"></Spinner>
	</TableRow>
	<TableRow
	android:id="@+id/TableRow01"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
		<TextView  
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:id="@+id/CourseAddressT" 
    	android:text="@string/CourseAddress"
    	/>
    	<EditText
    	android:id="@+id/CourseAddressE"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"></EditText>
    </TableRow>
	<TableRow
	android:id="@+id/TableRow01"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
		<Button
		android:id="@+id/OK"
		android:text="@string/OK"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		></Button>
		<Button
		android:id="@+id/Cancle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/Cancle"></Button>
	</TableRow>
</TableLayout>  
</LinearLayout>
