<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <RadioGroup android:orientation="vertical"
    	android:layout_width="fill_parent"      
    	android:layout_height="wrap_content">
    	<RadioButton
    		android:id="@+id/localRemindingOnButton"
    		android:layout_width="wrap_content"          
    		android:layout_height="wrap_content"
    		android:checked="false"
    		android:text="@string/localRemindingOn"/>
    	<RadioButton
    		android:id="@+id/localRemindingOffButton"
    		android:layout_width="wrap_content"          
    		android:layout_height="wrap_content"
    		android:checked="true"
    		android:text="@string/localRemindingOff"/>
    </RadioGroup>
    <Button
    	android:id="@+id/localRemindingSaveButton"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/localRemindingSave"></Button>
</LinearLayout>
