<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <TableLayout
  	android:id="@+id/EveryCourseTabLayout"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:collapseColumns="2"
  	android:stretchColumns="1">
  	<TableRow
		android:id="@+id/TableRow02"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
  		<TextView
  			android:id="@+id/Every_CourseNameT"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip"
  			android:text="@string/CourseName">
  		</TextView>
  	  	<TextView
  			android:id="@+id/Every_CourseNameE"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip">
  		</TextView>
  	</TableRow>
  	 	<TableRow
		android:id="@+id/TableRow02"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
  		<TextView
  			android:id="@+id/Every_TeacherNameT"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip"
  			android:text="@string/TeacherName">
  		</TextView>
  	  	<TextView
  			android:id="@+id/Every_TeacherNameE"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip">
  		</TextView>
  	</TableRow>
  	<TableRow
		android:id="@+id/TableRow02"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
  		<TextView
  			android:id="@+id/Every_CourseWeeksT"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip"
  			android:text="@string/CourseWeeks">
  		</TextView>
  		
  	  	<TextView
  			android:id="@+id/Every_CourseWeeksE"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip">
  		</TextView>
  	</TableRow>
  	  	<TableRow
		android:id="@+id/TableRow02"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
  		<TextView
  			android:id="@+id/Every_CourseDateT"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip"
  			android:text="@string/CourseDate">
  		</TextView>
  	  	<TextView
  			android:id="@+id/Every_CourseDateE"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip">
  		</TextView>
  	</TableRow>
  	 	<TableRow
		android:id="@+id/TableRow02"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
  		<TextView
  			android:id="@+id/Every_CourseTimeT"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip"
  			android:text="@string/CourseTime">
  		</TextView>
  	  	<TextView
  			android:id="@+id/Every_CourseTimeE"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip">
  		</TextView>
  	</TableRow>

  	 	<TableRow
		android:id="@+id/TableRow02"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
  		<TextView
  			android:id="@+id/Every_CourseAddressT"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip"
  			android:text="@string/CourseAddress">
  		</TextView>
  	  	<TextView
  			android:id="@+id/Every_CourseAddressE"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginLeft="20dip"
  			android:layout_marginRight="20dip">
  		</TextView>
  	</TableRow>
  	 	
  </TableLayout>
</LinearLayout>